// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`options > disable all 1`] = `
{
  "code": "-(()=>{console.group();console.log('hello javascript');console.groupEnd()})()",
  "map": SourceMap {
    "file": undefined,
    "mappings": "uBAAA",
    "names": [],
    "sources": [
      "/home/runner/work/unplugin-turbo-console/src/App.vue",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`options > disable highlight editor 1`] = `
{
  "code": "-(()=>{console.group("%c🔦 http://localhost:undefined/client#Li4vLi4vaG9tZS9ydW5uZXIvd29yay91bnBsdWdpbi10dXJiby1jb25zb2xlL3NyYy9BcHAudnVlOjE6MQ==","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px");console.log('hello javascript');console.groupEnd()})()",
  "map": SourceMap {
    "file": undefined,
    "mappings": "wOAAA",
    "names": [],
    "sources": [
      "/home/runner/work/unplugin-turbo-console/src/App.vue",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`options > disable launch editor 1`] = `
{
  "code": "-(()=>{console.group("%c🚀 App.vue:1%c🔦 http://localhost:undefined/client#Li4vLi4vaG9tZS9ydW5uZXIvd29yay91bnBsdWdpbi10dXJiby1jb25zb2xlL3NyYy9BcHAudnVlOjE6MQ==","padding:2px 5px; border-radius:3px 0 0 3px;margin-bottom:5px;color: #fff; background: #4FC08D","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px");console.log('hello javascript');console.groupEnd()})()",
  "map": SourceMap {
    "file": undefined,
    "mappings": "sVAAA",
    "names": [],
    "sources": [
      "/home/runner/work/unplugin-turbo-console/src/App.vue",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`options > empty option 1`] = `
{
  "code": "-(()=>{console.group("%c🚀 App.vue:1%c🔦 http://localhost:undefined/client#Li4vLi4vaG9tZS9ydW5uZXIvd29yay91bnBsdWdpbi10dXJiby1jb25zb2xlL3NyYy9BcHAudnVlOjE6MQ==","padding:2px 5px; border-radius:3px 0 0 3px;margin-bottom:5px;color: #fff; background: #4FC08D","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px");console.log('hello javascript');console.groupEnd()})()",
  "map": SourceMap {
    "file": undefined,
    "mappings": "sVAAA",
    "names": [],
    "sources": [
      "/home/runner/work/unplugin-turbo-console/src/App.vue",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`options > perfix suffix 1`] = `
{
  "code": "-(()=>{console.log("xxxx");console.group();console.log('hello javascript');console.groupEnd();console.log("yyy")})()",
  "map": SourceMap {
    "file": undefined,
    "mappings": "2CAAA",
    "names": [],
    "sources": [
      "/home/runner/work/unplugin-turbo-console/src/App.vue",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;
